# Maestro

./: .gitignore  CMakeLists.txt
cmake/: PackageConfig.cmake.in
cmake/templates/: maestro.h.in
include/maestro/: maestro.h  maestro_logger.h  maestro_path.h  maestro_uptime.h  maestro_vulkan.h  maestro_vulkan_conductor.h  maestro_vulkan_sequencer.h  maestro_vulkan_swapchain.h  maestro_window.h
include/maestro/utils/: maestro_platform.h
src/: maestro_globals.h  maestro_names.h  maestro_package.c
src/impl/: maestro_logger.c  maestro_logger.h  maestro_path.c  maestro_path.h  maestro_uptime.c  maestro_uptime.h  maestro_vulkan.c  maestro_vulkan.h  maestro_vulkan_conductor.c  maestro_vulkan_conductor.h  maestro_vulkan_sequencer.c  maestro_vulkan_sequencer.h  maestro_vulkan_swapchain.c  maestro_vulkan_swapchain.h  maestro_window.h  maestro_window_linux.c  maestro_window_win32.c
tests/: CMakeLists.txt  bench_logger.c  test_conductor.c  test_logger.c  test_path.c  test_sequencer.c  test_surface.c  test_swapchain.c  test_vulkan.c  test_window.c
